Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8182163
Missing #include "logging/log.hpp" in vm_version_linux_sparc.cpp
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P4
Fix Version/s:
10
Affects Version/s:
10
Component/s:
hotspot
Labels:
None
Subcomponent:
runtime
Resolved In Build:
b21
CPU:
sparc
OS:
linux
Description
The file vm_version_linux_sparc.cpp is missing to include the header file hotspot/src/share/vm/logging/log.hpp.
Attachments
Attachments
Options
Sort By Name
Sort By Date
Ascending
Descending
Thumbnails
List
Download All
hotspot-add-missing-log-header.patch
0.3 kB
2017-06-14 02:54
hotspot-add-missing-log-header.patch
0.3 kB
2017-06-14 02:52
Activity
People
Assignee:
Erik Helin
Reporter:
Erik Helin
Votes
:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
2017-06-14 02:52
Updated:
2019-05-22 13:11
Resolved:
2017-07-14 06:43