8182163: Missing #include "logging/log.hpp" in vm_version_linux_sparc.cpp

Reviewed-by: ehelin, stuefe