hotspot/src/os_cpu/linux_sparc/vm/vm_version_linux_sparc.cpp
@@ -22,6 +22,7 @@
  *
  */
 
+#include "logging/log.hpp"
 #include "precompiled.hpp"
 #include "runtime/os.hpp"
 #include "vm_version_sparc.hpp"
